# challenge-threat-intelligence

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.seed  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  research.md
data/: schema.sql
docs/: PRD.md
scripts/: k6_loadtest.js  seed.py
src/alembic/: env.py
src/alembic/versions/: 9bad212b1b92_add_olap_indexes_and_summary_table.py  e46ef46d0daf_initial_schema.py
src/app/: config.py  db.py  main.py  middleware.py  sanitize.py
src/app/models/: __init__.py  campaigns.py  dashboard.py  health.py  indicators.py
src/app/routers/: campaigns.py  dashboard.py  health.py  indicators.py
src/app/services/: background.py  cache.py  opensearch.py  postgres.py  rate_limiter.py  redis_client.py
src/tests/: conftest.py  test_background.py  test_cache.py  test_campaigns.py  test_dashboard.py  test_health.py  test_indicators.py  test_integration.py  test_rate_limit_middleware.py  test_rate_limiter.py  test_summary.py
