[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[project]
name = "threat-intelligence-api"
version = "0.1.0"
description = "FastAPI backend for a real-time security dashboard with CQRS architecture"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn[standard]==0.43.0",
    "opensearch-py[async]==3.1.0",
    "asyncpg==0.31.0",
    "sqlalchemy[asyncio]==2.0.49",
    "alembic==1.18.4",
    "redis[hiredis]==7.4.0",
    "structlog==25.5.0",
    "pydantic-settings==2.13.1",
    "psycopg2-binary==2.9.11",
]

[project.optional-dependencies]
dev = [
    "httpx==0.28.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.9",
    "mypy==1.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]
extend-exclude = ["src/alembic/versions"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E", "W", # pycodestyle
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "B008",   # function calls in defaults (standard FastAPI pattern for Query/Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["src/alembic/"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["opensearchpy.*"]
ignore_missing_imports = true
